--- a/web/templates/views/index.jade
+++ b/web/templates/views/index.jade
@@ -8,7 +8,7 @@ block content
   #fullpage
     .section
       .repo.bounceInDown
-        a(href='https://github.com/Tjatse/pm2-gui', target='_blank') Github Repo
+        a(href='https://github.com/JasminDreasond/pm2-gui-better', target='_blank') Github Repo
         span
       .polar-usage
       .system-info
