--- a/web/templates/layouts/default.jade
+++ b/web/templates/layouts/default.jade
@@ -4,6 +4,8 @@ html(lang=en)
     meta(charset='UTF-8')
     title= title + '- PM2 Monitor'
     meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=2.0')
+    meta(name='robots', content='noindex')
+    meta('http-equiv'='Content-Security-Policy', content=httpsInfo)
     link(rel='stylesheet', href='/css/bootstrap.min.css')
     link(rel='stylesheet', href='/css/jquery.sticky.min.css')
     link(rel='stylesheet', href='/css/animation.min.css')
